--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
-<title> Help | Root Haxor | Github </title>
+<title> Help | Github </title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=320, initial-scale=1.0, maximum-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,7 +22,7 @@
 <meta name="twitter:url" content="http://roothaxor.github.io/help/"/>
 <meta name="twitter:card" content="summary"/>
 <meta property="og:site_name" content="Github | Root Haxor " />
-<meta property="og:url" content="http://roothaxor.github.io" />
+<meta property="og:url" content="http://roothaxor.github.io/help/" />
 <meta property="og:title" content="Github | Root Haxor" />
 <meta property="og:description" content="All Projects From Root Haxor" />
 <link href="stylesheets/bootstrap.css" rel="stylesheet">
@@ -51,13 +51,17 @@
 			<div class="col-sm-10 col-sm-offset-1"><br>
 				<h2>Table of Contents</h2>
 					 <ul>
-  <li><p>Vast Libary on Window's Various Commands <a href="https://roothaxor.github.io/Windows/"> CLICK HERE</a></p></li>
+  <li><p>Vast Library on Window's Various Commands <a href="https://roothaxor.github.io/Windows/"> CLICK HERE</a></p></li>
   <li><p>Scan Your Local Network Online - <a href="https://roothaxor.github.io/LocalScan"> CLICK HERE</a></p></li>
   <li><p>Metasploit Commands ( CheatSheet ) <a href="https://roothaxor.github.io/MSFCheatSheet/">CLICK HERE</a></p></li>
-  <li><p>Python Scripts Various Work <a href="https://roothaxor.github.io/Python/">CLICK HERE</a></p></li>
+  <li><p>Python Scripts Various Work <a href="https://github.com/roothaxor/Python/">CLICK HERE</a></p></li>
   <li><p>Ransomware Programming and Codes <a href="https://roothaxor.github.io/Ransom/">CLICK HERE</a></p></li>
   <li><p>Some Stuff for Obfuscation <a href="https://roothaxor.github.io/Obfuscation/">ClICK HERE</a></p></li><center>
-
+  <br><br><h2>Forked Projects - Table of Contents</h2>
+  <li><p>Payloads for practical exploitation of cross site scripting <a href="https://github.com/roothaxor/xss_payloads">CLICK HERE</a></p></li>
+  <li><p>x64dbg ~ open-source x32/x64 debugger for Windows.<a href="https://github.com/roothaxor/x64dbg">CLICK HERE</a></p></li>
+  <li><p>Curated list of awesome honeypots, tools & components <a href="https://github.com/roothaxor/awesome-honeypots">CLICK HERE</a></p></li>
+  <li><p>Vast Library of Python tools for penetration<a href="https://github.com/roothaxor/python-pentest-tools">CLICK HERE</a></p></li>
 <br><br>
   <p> IF any_error=true; mail_me : <a href="mailto:roothaxor@protonmail.com">roothaxor@protonmail.com</a>
 
