--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
   <li><p>Metasploit Commands ( CheatSheet ) <a href="https://roothaxor.github.io/MSFCheatSheet/">CLICK HERE</a></p></li>
   <li><p>Python Scripts Various Work <a href="https://github.com/roothaxor/Python/">CLICK HERE</a></p></li>
   <li><p>Ransomware Programming and Codes <a href="https://roothaxor.github.io/Ransom/">CLICK HERE</a></p></li>
-  <li><p>Some Stuff for Obfuscation <a href="https://roothaxor.github.io/Obfuscation/">ClICK HERE</a></p></li><center>
+  <li><p>Some Stuff for Obfuscation <a href="https://roothaxor.github.io/Obfuscation/">ClICK HERE</a></p></li>
   <br><br><h2>Forked Projects - Table of Contents</h2>
   <li><p>Payloads for practical exploitation of cross site scripting <a href="https://github.com/roothaxor/xss_payloads">CLICK HERE</a></p></li>
   <li><p>x64dbg ~ open-source x32/x64 debugger for Windows.<a href="https://github.com/roothaxor/x64dbg">CLICK HERE</a></p></li>
   <li><p>Curated list of awesome honeypots, tools & components <a href="https://github.com/roothaxor/awesome-honeypots">CLICK HERE</a></p></li>
   <li><p>Vast Library of Python tools for penetration<a href="https://github.com/roothaxor/python-pentest-tools">CLICK HERE</a></p></li>
-<br><br>
-  <p> IF any_error=true; mail_me : <a href="mailto:roothaxor@protonmail.com">roothaxor@protonmail.com</a>
+<br><br><center>
+  <p> IF any_error=true; mail_me : <a href="mailto:roothaxor@protonmail.com">roothaxor@protonmail.com</a></center>
 
 </ul>
 				<br><Br>
