--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 <META NAME="robot" CONTENT="index,follow">
 <META NAME="copyright" CONTENT="Copyright © 2015-2016 Github Hosting. All Rights Reserved.">
 <META NAME="revisit-after" CONTENT="3 days">
-<meta name="twitter:title" content="Root Haxor ~ Github"/>
-<meta name="twitter:image" content=""/>
+<meta name="twitter:title" content="Static page, Contains list of Repositories and Projects "/>
+<meta name="twitter:image" content="https://pbs.twimg.com/profile_images/760102915461697536/2X_i4wyr.jpg"/>
 <meta name="twitter:url" content="http://roothaxor.github.io/help/"/>
 <meta name="twitter:card" content="summary"/>
 <meta property="og:site_name" content="Github | Root Haxor " />
 <meta property="og:url" content="http://roothaxor.github.io/help/" />
 <meta property="og:title" content="Github | Root Haxor" />
-<meta property="og:description" content="All Projects From Root Haxor" />
+<meta property="og:description" content=" :) :) :) :) :) :) :) :) :) :) :) :) :) :)" />
 <link href="stylesheets/bootstrap.css" rel="stylesheet">
 <link href="stylesheets/ionicons.min.css" rel="stylesheet">
 <link href="stylesheets/style2.css" rel="stylesheet">
