--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <li><p>Metasploit Commands ( CheatSheet ) <a href="https://roothaxor.github.io/MSFCheatSheet/">CLICK HERE</a></p></li>
   <li><p>Python Scripts Various Work <a href="https://github.com/roothaxor/Python/">CLICK HERE</a></p></li>
   <li><p>Ransomware Programming and Codes <a href="https://roothaxor.github.io/Ransom/">CLICK HERE</a></p></li>
-  <li><p>Some Stuff for Obfuscation <a href="https://roothaxor.github.io/Obfuscation/">ClICK HERE</a></p></li>
+  <li><p>Some Stuff for Obfuscation <a href="https://roothaxor.github.io/Obfuscation/">CLICK HERE</a></p></li>
   <br><br><h2>Forked Projects - Table of Contents</h2>
   <li><p>Inception ~ Physical memory manipulation and hacking tool exploiting PCI-based DMA   Or In Simple Words Bypass Win/OSx/Linux Security<a href="https://github.com/roothaxor/inception"> CLICK HERE</a></p></li>
   <li><p>Payloads for practical exploitation of cross site scripting ( XSS ) <a href="https://github.com/roothaxor/xss_payloads">CLICK HERE</a></p></li>
