--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
   <li><p>Python Scripts Various Work <a href="https://github.com/roothaxor/Python/">CLICK HERE</a></p></li>
   <li><p>Ransomware Programming and Codes <a href="https://roothaxor.github.io/Ransom/">CLICK HERE</a></p></li>
   <li><p>Some Stuff for Obfuscation <a href="https://roothaxor.github.io/Obfuscation/">CLICK HERE</a></p></li>
+  <br><h2>Projects Hosted On Gitlab</h2>
+  <li><p>Convert RubberDucky Script into Arduino ( Stable/Extended Version ) <a href="https://roothaxor.gitlab.io/ducky2arduino_stable/"> CLICK HERE</a></p></li>
+  <li><p>Convert RubberDucky Script into Arduino ( Innocent Version ) <a href="http://roothaxor.gitlab.io/ducky2arduino">CLICK HERE</a></p></li>
+  <li><p>Remove Exif/Meta Data Or Locate Image on Google Maps <a href="https://roothaxor.gitlab.io/Exifool">CLICK HERE</a></p></li>
+  <li><p>Find My Local and Public IP address Online <a href="http://roothaxor.gitlab.io/Whatismyip">CLICK HERE</a></p></li>
   <br><br><h2>Forked Projects - Table of Contents</h2>
   <li><p>Inception ~ Physical memory manipulation and hacking tool exploiting PCI-based DMA   Or In Simple Words Bypass Win/OSx/Linux Security<a href="https://github.com/roothaxor/inception"> CLICK HERE</a></p></li>
   <li><p>Payloads for practical exploitation of cross site scripting ( XSS ) <a href="https://github.com/roothaxor/xss_payloads">CLICK HERE</a></p></li>
