--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 				<center><h1>Table of Contents</h1></center>
 					 <ul>
   <li><p>Vast Library on Window's Various Commands <a href="https://roothaxor.github.io/Windows/"> CLICK HERE</a></p></li>
+  <li><p>Check Your Battery Status Online <a href="http://roothaxor.gitlab.io/my-battery-status"> CLICK HERE</a></p></li>
   <li><p>Scan Your Local Network Online - <a href="https://roothaxor.github.io/LocalScan"> CLICK HERE</a></p></li>
   <li><p>Metasploit Commands ( CheatSheet ) <a href="https://roothaxor.github.io/MSFCheatSheet/">CLICK HERE</a></p></li>
   <li><p>Python Scripts Various Work <a href="https://github.com/roothaxor/Python/">CLICK HERE</a></p></li>
