--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 	  <div class="grid grid--gutters">
         <article class="grid-cell">
-          <a class="projects__card checked" href="https://roothaxor.gitlab.io/Privacy/" target="_blank">
+          <a class="projects__card checked" href="https://roothaxor.github.io/Privacy/" target="_blank">
             <h3 class="projects__title">Privacy !!</h3>
             <p class="projects__description">Find out how your browser been saying no to privacy</p>
           </a>
