--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
           </a>
         </article>
         <article class="grid-cell">
-          <a class="projects__card bafrontend" href="#" target="_blank">
-            <h3 class="projects__title">Upcoming</h3>
-            <p class="projects__description">Soon! Soon! Soon! Soon!</p>
+          <a class="projects__card bafrontend" href="https://github.com/roothaxor/Windows/tree/master/BrowserPrivacy" target="_blank">
+            <h3 class="projects__title">Broswer Privacy</h3>
+            <p class="projects__description">Stop Your Broswer Leaking Your Informations</p>
           </a>
         </article>
       </div>
