--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
            <!-- <a class="learn-more" target="_blank" href="#">Learn More <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a> -->
           </div>
           <div class="col-md-4">
-          <h3>Exifool tool</h3>
+          <h3>Exifool ( Web Based )</h3>
           <p>Remove Exif/Meta data from photos before sharing on the internet or locate image on Google Maps.<br></p>
           <a class="btn btn-primary" href="https://roothaxor.gitlab.io/Exifool/" target="_blank" role="button">Goto Exifool</a> <!-- <a class="learn-more" target="_blank" href="#">Learn More <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a> -->
           </div>
@@ -121,14 +121,14 @@
           <a class="btn btn-primary" href="https://github.com/roothaxor/Exif-Remove" target="_blank" role="button">Download</a> <!-- <a class="learn-more" target="_blank" href="#">Learn More <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a> -->
           </div>
           <div class="col-md-4">
-          <h3>Coming..</h3>
-          <p>Soon...<br></p>
-          <a class="btn btn-primary disabled" href="https://google.com" target="_blank" role="button">View Repo Page</a> <!-- <a class="learn-more" target="_blank" href="#">Learn More <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a> -->
+          <h3>PyStat</h3>
+          <p>Advanced Netstat Using Python For Windows<br></p>
+          <a class="btn btn-primary" href="https://github.com/roothaxor/PyStat" target="_blank" role="button">View Repo Page</a> <!-- <a class="learn-more" target="_blank" href="#">Learn More <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a> -->
           </div>
           <div class="col-md-4">
-          <h3>Coming..</h3>
-          <p>Soon...<br></p>
-          <a class="btn btn-primary disabled" href="https://google.com" target="_blank" role="button">View Repo Page</a> <!-- <a class="learn-more" target="_blank" href="#">Learn More <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a> ->
+          <h3>IPTrace</h3>
+          <p>Trace IP/Url's City, State, Lat, long information with free MaxMind Database<br></p>
+          <a class="btn btn-primary" href="https://github.com/roothaxor/IPTrace" target="_blank" role="button">View Repo Page</a> <!-- <a class="learn-more" target="_blank" href="#">Learn More <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a> ->
         </div>
 
         <div class="row">
